# rust-automations

./: Cargo.toml  table.csv
src/: main.rs
