[package]
name = "rust-automations"
version = "0.1.0"
edition = "2024"

[dependencies]
thirtyfour = "0.35.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chromiumoxide = "0.8.0"
futures = "0.3.31"
dotenvy = "0.15.7"
chrono = "0.4.43"
headless_chrome = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.4.0"
strsim = "0.11.1"
regex = "1.12.3"
delete = "1.0.1"
